# nihongo-miner

./: .gitignore  README.md  data.db  main.py  project_plan.md  pyproject.toml  setup_vocab.py
src/: anki.py  config.py  database.py  jotoba.py  jpdb.py  miner.py  utils.py
tests/: test_miner.py
