[project]
name = "nihongo-miner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ffsubsync>=0.5.0",
    "httpx>=0.28.1",
    "jamdict>=0.1a11.post2",
    "jamdict-data>=1.5",
    "pyqt5>=5.15.11",
    "questionary>=2.0.0",
    "rapidfuzz>=3.9.0",
    "rich>=15.0.0",
    "selectolax>=0.4.10",
    "sqlmodel>=0.0.39",
    "sudachidict-core>=20260428",
    "sudachipy>=0.6.11",
    "typer>=0.26.8",
]
